# ocms

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  readme.md  requirements.txt
courses/: permissions.py  serializers.py  urls.py
ocms/: asgi.py  settings.py  wsgi.py
src/: manage.py
src/api/: urls.py
src/api/v1/: exceptions.py  urls.py
src/api/v1/courses/: serializers.py  urls.py  views.py
src/api/v1/users/: serializers.py
src/auth/: urls.py
src/authentication/tests/: test_views.py
src/courses/: admin.py  apps.py  exceptions.py  models.py  permissions.py  querysets.py  serializers.py  validators.py  views.py
src/courses/migrations/: 0001_initial.py  0002_initial.py
src/courses/services/: __init__.py  course_service.py  grading_service.py  homework_service.py  lecture_service.py  submission_service.py
src/courses/tests/: factories.py  test_course_service.py  test_grading_service.py  test_homework_service.py  test_lecture_service.py  test_submission_service.py
src/ocms/: asgi.py  settings.py  urls.py  wsgi.py
src/ocms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tests/: conftest.py
src/users/: admin.py  apps.py  models.py  querysets.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
src/users/services/: __init__.py  user_service.py
src/users/tests/: test_user_service.py  test_views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
